--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,3 +1,5 @@
+name: CI
+
 on:
   push:
     branches: ["main"]
@@ -5,6 +7,7 @@ on:
 
 jobs:
   test:
+    name: Functional Tests
     runs-on: ubuntu-latest
 
     steps:
