feat(Project): add `deploy` and `release` project mgmt scripts

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,3 +31,10 @@ ruffsack = ["manifests/*.json"]
 name = "solidity"
 [[tool.ape.plugins]]
 name = "vyper"
+
+[[tool.ape.deployments.ethereum.local]]
+address = "0x5FbDB2315678afecb367f032d93F642f64180aa3"
+contract_type = "RuffsackFactory"
+[[tool.ape.deployments.ethereum.local]]
+address = "0xe7f1725E7734CE288F8367e1Bb143E90bb3F0512"
+contract_type = "Ruffsack"
