chore(CI): add `--size` to `ape compile` and `--gas` to `ape test`
Allows more clearly viewing changes to codesize and gas spend in CI

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -13,6 +13,6 @@ jobs:
     steps:
       - uses: actions/checkout@v5
       - uses: ApeWorX/github-action@v3
-      - run: ape compile
+      - run: ape compile --size
       - run: pip install .
-      - run: ape test -s
+      - run: ape test -s --gas
