--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -6,6 +6,15 @@ on:
   pull_request:
 
 jobs:
+  style:
+    name: Enforce Styleguide
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v5
+      - uses: astral-sh/ruff-action@v3
+      - run: ruff format --check --diff
+
   test:
     name: Functional Tests
     runs-on: ubuntu-latest
@@ -13,6 +22,6 @@ jobs:
     steps:
       - uses: actions/checkout@v5
       - uses: ApeWorX/github-action@v3
-      - run: ape compile
+      - run: ape compile --size
       - run: pip install .
-      - run: ape test -s
+      - run: ape test -s --gas
