--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,10 +7,21 @@ name = "ruffsack"
 version = "0.1.0"
 description = "Ruffsack: A rugged multisig wallet for everyday adventures"
 readme = "README.md"
-requires-python = ">=3.10"
+requires-python = ">=3.11"
 dependencies = [
-    "eth-ape>=0.8.37",
-    "eip712>=0.2.14",  # NOTE: Pin because an important fix is needed
+    "eth-ape>=0.8.41",
+    "eip712>=0.2.14", # NOTE: Pin because an important fix is needed
+    "createx>=0.1.1",
+]
+
+[dependency-groups]
+test = [
+    "ape-foundry>=0.8.10",
+    "ape-solidity>=0.8.5",
+    "ape-vyper>=0.8.9",
+]
+dev = [
+    {include-group = "test"},
 ]
 
 [[project.authors]]
@@ -28,10 +39,13 @@ ruffsack = ["manifests/*.json"]
 # NOTE: Required for `setuptools-scm` to function
 
 [[tool.ape.plugins]]
+name = "foundry"
+[[tool.ape.plugins]]
 name = "solidity"
 [[tool.ape.plugins]]
 name = "vyper"
 
+# Latest (v0.1)
 [[tool.ape.deployments.ethereum.local]]
 address = "0x5FbDB2315678afecb367f032d93F642f64180aa3"
 contract_type = "RuffsackFactory"
