--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,10 +7,21 @@ name = "ruffsack"
 version = "0.1.0"
 description = "Ruffsack: A rugged multisig wallet for everyday adventures"
 readme = "README.md"
-requires-python = ">=3.10"
+requires-python = ">=3.11"
 dependencies = [
-    "eth-ape>=0.8.37",
-    "eip712>=0.2.14",  # NOTE: Pin because an important fix is needed
+    "eth-ape>=0.8.41",
+    "eip712>=0.2.14", # NOTE: Pin because an important fix is needed
+    "createx>=0.1.1",
+]
+
+[dependency-groups]
+test = [
+    "ape-foundry>=0.8.10",
+    "ape-solidity>=0.8.5",
+    "ape-vyper>=0.8.9",
+]
+dev = [
+    {include-group = "test"},
 ]
 
 [[project.authors]]
@@ -28,13 +39,20 @@ ruffsack = ["manifests/*.json"]
 # NOTE: Required for `setuptools-scm` to function
 
 [[tool.ape.plugins]]
+name = "foundry"
+[[tool.ape.plugins]]
 name = "solidity"
 [[tool.ape.plugins]]
 name = "vyper"
 
-[[tool.ape.deployments.ethereum.local]]
-address = "0x5FbDB2315678afecb367f032d93F642f64180aa3"
+# Factory
+[[tool.ape.deployments.ethereum.sepolia]]#.deterministic]]
+address = "0x806625Fba26e57B2723e5DD194e573ca1EBcD903"
 contract_type = "RuffsackFactory"
-[[tool.ape.deployments.ethereum.local]]
-address = "0xe7f1725E7734CE288F8367e1Bb143E90bb3F0512"
+
+# Singleton
+# NOTE: Update latest Singleton when contract code changes
+# v1 (Latest)
+[[tool.ape.deployments.ethereum.local]]#.deterministic]]
+address = "0x82090520b492f1C08603499B8c3aE22eCCcC5fc5"
 contract_type = "Ruffsack"
